# brain-tumor-classification

./: .gitignore  2d_classify.py  README.md  classify.py  draw.py  hyperparams.py  loader.py  model.py  pool.txt  pyproject.toml  redirect.py  tmp.txt  train.py  visualize.py
brain_tumor_classification/: IDEAS.md  classify.py  hyperparams.py  loader.py  model.py  redirect.py  train.py  visualize.py
src/brain-tumor-classification/: loader.py  model.py  redirect.py
src/brain_tumor_classification/: classify.py  draw.py  hyperparams.py  loader.py  model.py  redirect.py  train.py
